--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,7 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-21.10
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
@@ -28,6 +28,9 @@ jobs:
 
     - name: Echo clang version
       run: clang --version
+
+    - name: Echo clang13 version
+      run: clang13 --version
 #
 #    - name: Configure CMake
 #      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
