--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,7 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v3
@@ -29,21 +29,25 @@ jobs:
     - name: Echo clang version
       run: clang --version
 
-    - name: Echo clang13 version
-      run: clang13 --version
-#
-#    - name: Configure CMake
-#      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-#      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-#      run: git submodule update --init --recursive && export CC=`which clang` CXX=`which clang++` && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-#
-#    - name: Build
-#      # Build your program with the given configuration
-#      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-#
-#    - name: Test
-#      working-directory: ${{github.workspace}}/build
-#      # Execute tests defined by the CMake configuration.
-#      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-#      run: ctest -C ${{env.BUILD_TYPE}}
+    - name: GLIBC version
+      run: strings /lib/x86_64-linux-gnu/libc.so.6 | grep GLIBC_
 
+    - name: Update submodule
+      run: git submodule update --init --recursive
+
+    - name: Configure CMake
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: export CC=`which clang` CXX=`which clang++` && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+
+
+    - name: Build
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} && PARALLEL="$(($(nproc) / + 1))"  && make -j $$PARALLEL
+
+    - name: Unit Test
+      working-directory: ${{github.workspace}}/build
+      run: ./src/unit_tests_dbms
+
+    - name: Integration Test
+      working-directory: ${{github.workspace}}/tests/integration
+      run:  ./runner --binary ${{github.workspace}}/build/programs/raftkeeper  --base-configs-dir ${{github.workspace}}/programs/server
